--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,28 +1,34 @@
 {
-  "name": "Ubuntu VNC Desktop (Reliable)",
-  "build": {
-    "dockerfile": "Dockerfile"
-  },
-
-  // Chạy một lần duy nhất SAU KHI container được tạo
-  // Dùng để thiết lập cấu hình ban đầu
-  "onCreateCommand": "bash -c 'mkdir -p ~/.vnc && echo \"12345678\" | vncpasswd -f > ~/.vnc/passwd && chmod 600 ~/.vnc/passwd && echo -e \"#!/bin/bash\\nxrdb \\\$HOME/.Xresources\\nstartxfce4 &\" > ~/.vnc/xstartup && chmod +x ~/.vnc/xstartup'",
-
-  // Chạy MỖI KHI container khởi động hoặc resume
-  // Dùng để khởi động các dịch vụ
-  "postStartCommand": "/usr/local/bin/vnc-startup.sh",
-
-  // In ra một thông điệp hữu ích khi bạn kết nối vào Codespace
-  "postAttachCommand": "echo 'VNC Desktop is running. Access it via the PORTS tab -> Port 6080.'",
-
-  // Cấu hình chuyển tiếp cổng (port forwarding)
-  "forwardPorts": [6080],
-  "portsAttributes": {
-    "6080": {
-      "label": "VNC Desktop (noVNC)",
-      "onAutoForward": "openBrowser"
-    }
-  },
-
-  "remoteUser": "vscode"
+    "name": "Ubuntu VPS Codespaces",
+    "image": "mcr.microsoft.com/vscode/devcontainers/universal:2-linux",
+    "features": {
+        "ghcr.io/devcontainers/features/desktop-lite:1": {
+            "password": "12345678",
+            "webPort": "6080",
+            "vncPort": "5901"
+        }
+    },
+    "postCreateCommand": "sudo apt-get update && sudo apt-get install -y xfce4 xfce4-goodies dbus-x11 xrdp && sudo systemctl enable xrdp && sudo systemctl start xrdp && sudo adduser xrdp ssl-cert && echo 'exec startxfce4' > ~/.xsession",
+    "forwardPorts": [
+        5901,
+        6080,
+        3389
+    ],
+    "portsAttributes": {
+        "5901": {
+            "label": "VNC"
+        },
+        "6080": {
+            "label": "noVNC (Browser)"
+        },
+        "3389": {
+            "label": "RDP"
+        }
+    },
+    "customizations": {
+        "vscode": {
+            "extensions": []
+        }
+    },
+    "remoteUser": "vscode"
 }
