--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,34 @@
-# Bắt đầu từ image gốc của Microsoft để có sẵn các công cụ cần thiết
-FROM mcr.microsoft.com/vscode/devcontainers/universal:2-linux
+{
+    "name": "Ubuntu VPS Codespaces (Pro)",
+    "build": {
+        "dockerfile": "Dockerfile"
+    },
+    "features": {
+        "ghcr.io/devcontainers/features/desktop-lite:1": {
+            "password": "12345678",
+            "webPort": "6080",
+            "vncPort": "5901"
+        }
+    },
 
-# Chuyển sang user root để cài đặt phần mềm
-USER root
-
-# Cập nhật và cài đặt XFCE, XRDP, và các công cụ cần thiết cho desktop
-# Dùng DEBIAN_FRONTEND=noninteractive để tránh các câu hỏi tương tác khi cài đặt
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends xfce4 xfce4-goodies dbus-x11 xrdp
-
-# Chuyển về user mặc định của codespace
-USER vscode
+    // Chạy kịch bản startup.sh một lần duy nhất sau khi container được tạo
+    "postCreateCommand": ".devcontainer/startup.sh",
+    
+    "forwardPorts": [
+        5901,
+        6080,
+        3389
+    ],
+    "portsAttributes": {
+        "5901": {
+            "label": "VNC"
+        },
+        "6080": {
+            "label": "noVNC (Browser)"
+        },
+        "3389": {
+            "label": "RDP"
+        }
+    },
+    "remoteUser": "vscode"
+}
