--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
+      - SUBFOLDER=true # Thử đổi thành true thay vì xóa
     volumes:
       - ./config:/config
     ports:
@@ -14,3 +15,4 @@ services:
       - 3389:3389
     shm_size: '1gb'
     restart: unless-stopped # Thêm dòng này để container tự khởi động lại khi có lỗi
+
