--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,12 +7,13 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
-      - SUBFOLDER=true # Thử đổi thành true thay vì xóa
+      # Dòng SUBFOLDER bạn có thể xóa hoặc để lại tùy kết quả lần trước
     volumes:
       - ./config:/config
+      # THÊM DÒNG NÀY VÀO:
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 3000:3000
       - 3389:3389
     shm_size: '1gb'
-    restart: unless-stopped # Thêm dòng này để container tự khởi động lại khi có lỗi
-
+    restart: unless-stopped
