--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
-      # Dòng SUBFOLDER bạn có thể xóa hoặc để lại tùy kết quả lần trước
     volumes:
       - ./config:/config
-      # THÊM DÒNG NÀY VÀO:
       - /var/run/docker.sock:/var/run/docker.sock
+      # THÊM DÒNG NÀY VÀO:
+      - ./nginx_conf/webtop.conf:/config/nginx/site-confs/default.conf
     ports:
       - 3000:3000
       - 3389:3389
